<resources>
    <string name="app_name">RatApp</string>
    <string name="as">Android Studio</string>
    <string name="email">androidstudio@android.com</string>
    <string name="blank"></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add Rat</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_username_exists">This username is already taken</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Registration Strings -->
    <string name="retype">Retype Password</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>


    <!-- Strings for Add Rat Activity -->
    <string name="back">Back</string>
    <string name="zip">Zip</string>
    <string name="location_type">Location Type</string>
    <string name="borough">Borough</string>
    <string name="upload">Upload</string>

    <!-- Strings for Map and Graphs -->
    <string name="graph">Graph</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="time_of_day">Time of Day</string>
    <string name="city_android_inputtype">City</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="displays">
        <item>Map</item>
        <item>Histogram</item>
    </string-array>
    <string name="display_title">Displays</string>
    <string name="testrange">Test Range</string>
</resources>
