<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addrat"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_add"/>
        <item
            android:id="@+id/map_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_map" />
        <item
            android:id="@+id/graph_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/graph"/>
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_logout" />

    </group>



</menu>
